tests/example_with_specific_ingress/diff_output_from_example_policy_blocking_ingress.txt
Connectivity diff:
diff-type: added, source: {ingress-nginx}, destination: default/apple-app[Pod], ref1: No Connections, ref2: TCP 5678, workloads-diff-info: workload {ingress-nginx} added
