tests/example_with_specific_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: ingress.nginx.example.com
    http:
      paths:
        - path: /apple
          backend:
            service: 
              name: apple-service
              port: 
                number: 5678
        - path: /banana
          backend:
            service:
              name: banana-service
              port: 
                number: 5678
